Adds Maven run configuration for Jfoenix library compatability